Natural language queries from Terminal now filter top ten items using Cosine distance